TEIID-164 TEIID-161 TEIID-390 adding a common type conversion facility for connectors and functions.  fixed loopback procedure execution. Also cleaned up calendar caching.